ReservationService improved