@@ -18,7 +18,8 @@ import ua.tqs.dto.ReservationResponseDTO;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
+
 
 @Service
 public class ReservationService {
@@ -45,7 +46,6 @@ public class ReservationService {
         this.userRepository = userRepository;
         this.jwtUtil = jwtUtil;
 
-        // Initialize grafana metrics
         this.totalReservations = Counter.builder("reservations.total")
                 .description("Total number of reservations")
                 .register(meterRegistry);
@@ -69,85 +69,100 @@ public class ReservationService {
         meterRegistry.gauge("reservations.current.total",
                 reservationRepository,
                 CrudRepository::count);
+    }
 
-        meterRegistry.gauge("reservations.average.cost",
-                reservationRepository,
-                repo -> repo.findAll().stream()
-                        .mapToDouble(Reservation::getTotalCost)
-                        .average()
-                        .orElse(0.0));
+    private ReservationResponseDTO mapToDTO(Reservation reservation, boolean includeUserDetails) {
+        ReservationResponseDTO dto = new ReservationResponseDTO();
+        dto.setId(reservation.getId());
+        dto.setUserId(reservation.getUser().getId());
+        dto.setSlotId(reservation.getSlot().getId());
+        dto.setState(reservation.getStatus().name());
+        dto.setConsumptionKWh(reservation.getConsumptionKWh());
+        dto.setTotalCost(reservation.getTotalCost());
+        dto.setPaid(reservation.isPaid());
+        dto.setStationName(reservation.getSlot().getStation().getName());
+        dto.setChargingType(reservation.getSlot().getChargingType().name());
+        dto.setCreatedAt(reservation.getCreationDate());
+        dto.setStartTime(reservation.getStartTime());
+        dto.setDurationMinutes(reservation.getDurationMinutes());
+
+        if (includeUserDetails) {
+            dto.setUserEmail(reservation.getUser().getEmail());
+            dto.setUserName(reservation.getUser().getName());
+        }
+
+        return dto;
+    }
+
+    private Optional<ReservationResponseDTO> handleReservationError() {
+        reservationErrors.increment();
+        return Optional.empty();
     }
 
     public Optional<ReservationResponseDTO> createReservation(ReservationRequestDTO dto) {
+        return wrapWithTimer(() -> processReservationCreation(dto));
+    }
+
+    private Optional<ReservationResponseDTO> wrapWithTimer(Supplier<Optional<ReservationResponseDTO>> operation) {
         try {
-            return reservationCreationTimer.record(() -> {
-                try {
-                    Optional<User> userOpt = userRepository.findById(dto.getUserId());
-                    Optional<Slot> slotOpt = slotRepository.findById(dto.getSlotId());
-
-                    if (userOpt.isEmpty() || slotOpt.isEmpty()) {
-                        reservationErrors.increment();
-                        return Optional.empty();
-                    }
-
-                    Slot slot = slotOpt.get();
-                    if (slot.isReserved()) {
-                        reservationErrors.increment();
-                        return Optional.empty();
-                    }
-
-                    slot.setReserved(true);
-                    slotRepository.save(slot);
-
-                    Station station = slot.getStation();
-                    double discount = (station.isDiscountActive()) ? station.getDiscountValue() : 0.0;
-
-                    Reservation reservation = new Reservation();
-                    reservation.setUser(userOpt.get());
-                    reservation.setSlot(slot);
-                    reservation.setStatus(ReservationStatus.ACTIVE);
-                    reservation.setCreationDate(LocalDateTime.now());
-                    reservation.setStartTime(dto.getStartTime());
-                    reservation.setStartDate(dto.getStartTime().toLocalDate());
-                    reservation.setDurationMinutes(dto.getDurationMinutes());
-
-                    reservation.setConsumptionKWh(dto.getConsumptionKWh());
-                    double basePrice = dto.getPricePerKWh() * dto.getConsumptionKWh();
-                    reservation.setTotalCost(basePrice * (1 - discount));
-                    reservation.setPaid(false);
-
-                    Reservation saved = reservationRepository.save(reservation);
-
-                    totalReservations.increment();
-                    activeReservations.increment();
-
-                    ReservationResponseDTO response = new ReservationResponseDTO();
-                    response.setId(saved.getId());
-                    response.setUserId(saved.getUser().getId());
-                    response.setSlotId(saved.getSlot().getId());
-                    response.setState(saved.getStatus().name());
-                    response.setConsumptionKWh(saved.getConsumptionKWh());
-                    response.setTotalCost(saved.getTotalCost());
-                    response.setPaid(saved.isPaid());
-                    response.setStartTime(saved.getStartTime());
-                    response.setDurationMinutes(saved.getDurationMinutes());
-                    response.setStationName(slot.getStation().getName());
-                    response.setChargingType(slot.getChargingType().name());
-                    response.setCreatedAt(saved.getCreationDate());
-
-                    meterRegistry.counter("reservations.by.station",
-                            "station", slot.getStation().getName()).increment();
-
-                    return Optional.of(response);
-                } catch (Exception e) {
-                    reservationErrors.increment();
-                    return Optional.empty();
-                }
-            });
+            return reservationCreationTimer.record(operation);
         } catch (Exception e) {
-            reservationErrors.increment();
-            return Optional.empty();
+            return handleReservationError();
         }
+    }
+
+    private Optional<ReservationResponseDTO> processReservationCreation(ReservationRequestDTO dto) {
+        try {
+            Optional<User> userOpt = userRepository.findById(dto.getUserId());
+            Optional<Slot> slotOpt = slotRepository.findById(dto.getSlotId());
+
+            if (userOpt.isEmpty() || slotOpt.isEmpty()) {
+                return handleReservationError();
+            }
+
+            Slot slot = slotOpt.get();
+            if (slot.isReserved()) {
+                return handleReservationError();
+            }
+
+            slot.setReserved(true);
+            slotRepository.save(slot);
+
+            Reservation reservation = createReservationEntity(dto, userOpt.get(), slot);
+            Reservation saved = reservationRepository.save(reservation);
+
+            totalReservations.increment();
+            activeReservations.increment();
+
+            ReservationResponseDTO response = mapToDTO(saved, false);
+
+            meterRegistry.counter("reservations.by.station",
+                    "station", slot.getStation().getName()).increment();
+
+            return Optional.of(response);
+        } catch (Exception e) {
+            return handleReservationError();
+        }
+    }
+
+    private Reservation createReservationEntity(ReservationRequestDTO dto, User user, Slot slot) {
+        Station station = slot.getStation();
+        double discount = (station.isDiscountActive()) ? station.getDiscountValue() : 0.0;
+        double basePrice = dto.getPricePerKWh() * dto.getConsumptionKWh();
+
+        Reservation reservation = new Reservation();
+        reservation.setUser(user);
+        reservation.setSlot(slot);
+        reservation.setStatus(ReservationStatus.ACTIVE);
+        reservation.setCreationDate(LocalDateTime.now());
+        reservation.setStartTime(dto.getStartTime());
+        reservation.setStartDate(dto.getStartTime().toLocalDate());
+        reservation.setDurationMinutes(dto.getDurationMinutes());
+        reservation.setConsumptionKWh(dto.getConsumptionKWh());
+        reservation.setTotalCost(basePrice * (1 - discount));
+        reservation.setPaid(false);
+
+        return reservation;
     }
 
     public boolean cancelReservation(Long reservationId) {
@@ -176,30 +191,10 @@ public class ReservationService {
         String email = jwtUtil.getUsername(token);
         Optional<User> userOpt = userRepository.findByEmail(email);
 
-        if (userOpt.isEmpty()) {
-            return List.of();
-        }
-
-        List<Reservation> reservations = reservationRepository.findByUser(userOpt.get());
-
-        return reservations.stream().map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setStartTime(reservation.getStartTime());
-            dto.setDurationMinutes(reservation.getDurationMinutes());
-
-            return dto;
-        }).collect(Collectors.toList());
+        return userOpt.map(user -> reservationRepository.findByUser(user).stream()
+                .map(reservation -> mapToDTO(reservation, false))
+                .toList()).orElseGet(List::of);
     }
-
 
     public double getTotalRevenue() {
         return reservationRepository.findAll().stream()
@@ -208,42 +203,13 @@ public class ReservationService {
     }
 
     public List<ReservationResponseDTO> getAllReservations() {
-        return reservationRepository.findAll().stream().map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setUserEmail(reservation.getUser().getEmail());
-            dto.setUserName(reservation.getUser().getName());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setCreatedAt(reservation.getCreationDate());
-            return dto;
-        }).collect(Collectors.toList());
+        return reservationRepository.findAll().stream()
+                .map(reservation -> mapToDTO(reservation, true))
+                .toList();
     }
 
     public Optional<ReservationResponseDTO> getReservationById(Long id) {
-        return reservationRepository.findById(id).map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setUserEmail(reservation.getUser().getEmail());
-            dto.setUserName(reservation.getUser().getName());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setCreatedAt(reservation.getCreationDate());
-            dto.setStartTime(reservation.getStartTime());
-            dto.setDurationMinutes(reservation.getDurationMinutes());
-            return dto;
-        });
+        return reservationRepository.findById(id)
+                .map(reservation -> mapToDTO(reservation, true));
     }
 }
